# arrow

./: .dockerignore  .env  .travis.yml  CHANGELOG.md  docker-compose-old.yml  docker-compose.yml
.github/: main.workflow
.github/workflows/: c_glib.yml  comment_bot.yml  cpp.yml  crossbow_cron.yml  csharp.yml  dev.yml  go.yml  java.yml  js.yml  lint.yml  matlab.yml  python.yml  r.yml  ruby.yml  rust.yml
ci/: Gopkg.toml  PKGBUILD  conda_env_cpp.txt  conda_env_linux.yml  conda_env_python.yml  conda_env_sphinx.yml  cpp-msvc-build-main.bat  docker_build_cpp.sh  requirements-test.txt  travis_script_python.sh
ci/docker/: conda-cpp.dockerfile  conda-latest-cpp.dockerfile  conda-latest-docs.dockerfile  conda-latest-integration.dockerfile  conda-latest-python-dask.dockerfile  conda-latest-python-docs.dockerfile  conda-latest-python-hdfs.dockerfile  conda-latest-python-pandas.dockerfile  conda-latest-python-spark.dockerfile  conda-latest-python-turbodbc.dockerfile  conda-latest-python.dockerfile  conda-latest-r.dockerfile  conda-python.dockerfile  cuda-10.0-cpp.dockerfile  debian-10-cpp.dockerfile  debian-10-go.dockerfile  debian-10-java.dockerfile  debian-10-js.dockerfile  debian-10-rust.dockerfile  fedora-29-cpp.dockerfile  linux-apt-c-glib.dockerfile  linux-apt-cmake.dockerfile  linux-apt-lint.dockerfile  (+7 more)
cpp/: Brewfile  CMakeLists.txt  README.md
csharp/: Directory.Build.props
dev/: README.md  docker-compose.yml
java/: pom.xml
python/: .gitignore  CMakeLists.txt  asv-build.sh  asv.conf.json  run_test.sh  setup.py
python/examples/c/: CMakeLists.txt  example.c
(+174 files in other folders)
